fix wrap text

--- a/004_faq_accordion/css/global.css
+++ b/004_faq_accordion/css/global.css
@@ -82,7 +82,6 @@ main {
 }
 .article--header {
   display: flex;
-  column-gap: 1.6rem;
   font-weight: 600;
   font-size: 16px;
   align-items: center;
@@ -92,7 +91,7 @@ main {
 .article:nth-of-type(4) {
   padding-bottom: 18px;
 }
-.article--header button {
+.article--header a {
   flex-shrink: 0;
   cursor: pointer;
 }
